fix footgray text-align to center

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ form {
 }
 
 a {
-  font-size: 10px;
+  font-size: 12px;
   text-decoration: none;
   color: rgb(41, 87, 173);
 }
@@ -33,8 +33,11 @@ body {
 
 .flex {
   display: flex;
-  align-items: center;
   justify-content: center;
+}
+
+.item {
+  align-items: center;
 }
 
 .navbar {
@@ -110,17 +113,17 @@ form input {
 
 .PrivacyStatement {
   font-style: italic;
-  font-size: 10px;
+  font-size: 13px;
   font-family: Helvetica, Arial, sans-serif;
-  padding-top: 60px;
-  text-align: center;
+  padding-top: 10px;
+  color: #838888;
 }
 
 .footgray {
   background-color: #eceef1;
   border: 1px  solid #c6c7cc;
   border-top: none;
-  font: 9px/1.4 Helvetica Neue, Helvetica, Arial, sans-serif;
+  font: 10px/1.4 Helvetica Neue, Helvetica, Arial, sans-serif;
   width: 375px;
   color: grey;
   padding-bottom: 20px;
@@ -144,6 +147,10 @@ footer ul a {
   font-size: 11px;
 }
 
+.footgray a {
+  font-size: 9px;
+}
+
 .thrinity-icons a {
   margin-right: 3px;
   color: #838888;
@@ -164,4 +171,6 @@ footer {
   padding-top: 30px;
 }
 
-h2.hidden { visibility: hidden; }
+h2.hidden {
+  visibility: hidden;
+}
